spostamento id su input

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
         </h1>
         <form action="">
             <div>
-                <div id="inputname">
+                <div >
                     Inserisci Nome e Cognome
                   </div>  
-                  <input type="text"placeholder=" Nome e Cognome ">
+                  <input id="inputname" type="text"placeholder=" Nome e Cognome ">
             </div>
             <div>
-                <div id="inputdistance">
+                <div >
                     inserisci distanza
                   </div>  
-                  <input type="number"placeholder="Distanza ">
+                  <input id="inputdistance" type="number"placeholder="Distanza ">
             </div>
             <div>
-                <div id="inputage">
+                <div >
                    Inserisci et&agrave;
                 </div>  
-                  <input type="number"placeholder="Età ">
+                  <input id="inputage" type="number"placeholder="Età ">
             </div>
            
         </form>
