aggiunta calsse info

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
                 <div class="info">
                     Inserisci Nome e Cognome
                   </div>  
-                  <input id="inputname" type="text"placeholder=" Nome e Cognome ">
+                  <input id="inputname" class="inputtrain" type="text"placeholder=" Nome e Cognome ">
             </div>
             <div>
                 <div class="info">
                     Quanti chilometri
                   </div>  
-                  <input id="inputdistance" type="number"placeholder="Distanza ">
+                  <input id="inputdistance"  class="inputtrain" type="number"placeholder="Distanza ">
             </div>
             <div>
                 <div class="info" >
                    Inserisci et&agrave;
                 </div>  
-                <select name="age" id="inputage">
+                <select name="age" id="inputage" >
                     <option value="minorenne">Minorenne</option>
                     <option value="maggiorenne">Maggiorenne</option>
                     <option value="over65">Over 65</option>
