--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>
             Controlla il tuo biglietto
         </h1>
-        <div class="flex-container">
+        <div id="ticketcontainer" class="flex-container-2 ">
             <div >
                 <h3 class="info">
                     Nome Passeggero
